@@ -43,7 +43,8 @@ callgraph_print ()
  
   strtime(&time, &prefix);
 
-  fprintf(graprof_out, " total runtime: %llu %sseconds\n", time, prefix);
+  fprintf(graprof_out, " total runtime:                  %llu %sseconds\n", time, prefix);
+  fprintf(graprof_out, " total number of function calls: %llu\n", function_get_total_calls());
   fprintf(graprof_out, "\n");
   fprintf(graprof_out, "          %%       self     children\n");
   fprintf(graprof_out, "  index  time      time      time       called       name\n");
